<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="activity_configure_connection">Configure Connection</string>
    <string name="activity_forgot_lock">Forgot Pattern</string>
    <string name="activity_home">@string/app_name</string>
    <string name="activity_host_keys">Host Keys</string>
    <string name="activity_lock">@string/app_name</string>
    <string name="activity_query">Query</string>
    <string name="activity_query_history">Query History</string>
    <string name="activity_query_results">Results</string>
    <string name="activity_saved_queries">Saved Queries</string>
    <string name="activity_select_driver">Select Server</string>
    <string name="activity_set_lock">Set Pattern</string>

    <string name="dialog_add_host_key">Add Host Key?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_clear_history">Clear History?</string>
    <string name="dialog_clear_history_confirm_msg">Are you sure you want to clear all history for this connection?</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_error_x">Error: %1$s</string>
    <string name="dialog_history_cleared">History cleared</string>
    <string name="dialog_host_fingerprint">Host: %1$s\nFingerprint: %2$s</string>
    <string name="dialog_message_delete_query">Are you sure you want to delete this query?</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_password">Password?</string>
    <string name="dialog_query">Query</string>
    <string name="dialog_query_enter_name">Please enter a name for the query.</string>
    <string name="dialog_query_save_failed">Failed to save query</string>
    <string name="dialog_query_saved">Query saved!</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_title_delete_query">Delete Query?</string>
    <string name="dialog_yes">Yes</string>

    <string name="error_no_detected_databases">No databases detected.</string>
    <string name="error_no_detected_tables">No tables detected.</string>
    <string name="error_postgres_changing_databases">Postgres doesn\'t support changing databases once connected.</string>
    <string name="error_select_database">Please select a database.</string>

    <string name="form_action_help">Help</string>
    <string name="form_action_keyboard_input">Toggle keyboard input</string>
    <string name="form_action_obscure">Toggle visibility</string>
    <string name="form_advanced_options">Advanced Options</string>
    <string name="form_connection_details">Connection Details</string>
    <string name="form_error_database_required">Please enter a database name.</string>
    <string name="form_error_host_required">Please enter the host name.</string>
    <string name="form_error_name_required">Please enter a name for the connection.</string>
    <string name="form_error_port_required">Please enter a valid port.</string>
    <string name="form_error_ssh_host_required">SSH host is required.</string>
    <string name="form_error_ssh_port_required">SSH port is required.</string>
    <string name="form_error_ssh_username_required">SSH username is required.</string>
    <string name="form_error_username_required">Please enter the username.</string>
    <string name="form_hint_database">Database</string>
    <string name="form_hint_domain">Domain</string>
    <string name="form_hint_host">Host (Required)</string>
    <string name="form_hint_instance">Instance</string>
    <string name="form_hint_name">Name (Required)</string>
    <string name="form_hint_password">Password</string>
    <string name="form_hint_port">Port (Required)</string>
    <string name="form_hint_ssh_host">Host (Required)</string>
    <string name="form_hint_ssh_passphrase">Passphrase (Optional)</string>
    <string name="form_hint_ssh_password">Password (Required)</string>
    <string name="form_hint_ssh_port">Port (Required)</string>
    <string name="form_hint_ssh_private_key">Private Key (Contents)</string>
    <string name="form_hint_ssh_username">Username (Required)</string>
    <string name="form_hint_username">Username (Required)</string>
    <string name="form_no">NO</string>
    <string name="form_save">Save</string>
    <string name="form_ssh_auth_type">Authentication Type:</string>
    <string name="form_ssh_auth_type_none">None</string>
    <string name="form_ssh_auth_type_password">Password</string>
    <string name="form_ssh_auth_type_private_key">Private Key</string>
    <string name="form_ssh_tunnel">SSH Tunnel</string>
    <string name="form_test">Test</string>
    <string name="form_trust_cert">Trust Cert.?</string>
    <string name="form_use_ssl">Use SSL?</string>
    <string name="form_yes">YES</string>

    <string name="help_database">Specify which database on the server to connect to directly.</string>
    <string name="help_domain">Specify the Windows domain to authenticate in.</string>
    <string name="help_host">Specify the host where the server is hosted. It can either be a domain or IP address.</string>
    <string name="help_instance">Specify the named instance to connect to.</string>
    <string name="help_name">Enter any name to associate with the given configuration. It will only be used within this application.</string>
    <string name="help_password">Specify the password necessary to authenticate with against the server. If left empty, we will ask you every time you attempt to connect.</string>
    <string name="help_port">Specify the port which your server is listening on.</string>
    <string name="help_positive_btn_label">Okay, got it!</string>
    <string name="help_ssh_host">Specify host of the SSH server to tunnel through.</string>
    <string name="help_ssh_passphrase">Specify SSH passphrase of the private key provided.</string>
    <string name="help_ssh_password">Specify SSH password for the SSH server to tunnel through.</string>
    <string name="help_ssh_port">Specify port of the SSH server to tunnel through.</string>
    <string name="help_ssh_private_key">Specify SSH private key to use for the SSH server to tunnel through.</string>
    <string name="help_ssh_tunnel">An SSH Tunnel can be used when direct connection to the database is not available.</string>
    <string name="help_ssh_tunnel_learn_more">Learn More</string>
    <string name="help_ssh_username">Specify SSH username for the SSH server to tunnel through.</string>
    <string name="help_trust_cert">Bypass validation of certificate when using SSL.</string>
    <string name="help_use_ssl">Specify whether the connection should be made over a secure connection.\n\nNote: SSL must be enabled and configured properly on your server.</string>
    <string name="help_username">Specify the username necessary to authenticate with against the server.</string>

    <string name="lock_clear_data">Open App Info</string>
    <string name="lock_forgot_instructions">
        <b>Sorry you forgot your pattern.</b>\n\nUnfortunately, for your security, the only way to continue using this application is to clear all data.</string>

    <string name="menu_about_app">About</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_configure">Configure</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_delete_connection">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_history">History</string>
    <string name="menu_host_keys">Manage Host Keys</string>
    <string name="menu_join_beta">Beta</string>
    <string name="menu_name_only">View names only</string>
    <string name="menu_open_">Open…</string>
    <string name="menu_query">Query</string>
    <string name="menu_quick_keys">Quick Keys</string>
    <string name="menu_rate_app">Rate</string>
    <string name="menu_save">Save As...</string>
    <string name="menu_saved">Saved</string>

    <string name="pl_access_pattern_area">Pattern area.</string>
    <string name="pl_access_pattern_cell_added">Cell added</string>
    <string name="pl_access_pattern_cell_added_verbose">Cell <xliff:g example="3" id="cell_index">%1$d</xliff:g> added</string>
    <string name="pl_access_pattern_cleared">Pattern cleared</string>
    <string name="pl_access_pattern_detected">Pattern completed</string>
    <string name="pl_access_pattern_start">Pattern started</string>
    <string name="pl_cancel">Cancel</string>
    <string name="pl_confirm">Confirm</string>
    <string name="pl_confirm_pattern">Draw the pattern again to confirm</string>
    <string name="pl_continue">Continue</string>
    <string name="pl_draw_pattern">Draw an unlock pattern</string>
    <string name="pl_draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="pl_forgot_pattern">Forgot pattern</string>
    <string name="pl_pattern_confirmed">Your new unlock pattern</string>
    <string name="pl_pattern_recorded">Pattern recorded</string>
    <string name="pl_pattern_too_short">Connect at least %d dots, please redraw</string>
    <string name="pl_recording_pattern">Release finger when done</string>
    <string name="pl_redraw">Redraw</string>
    <string name="pl_wrong_pattern">Wrong pattern, please retry</string>

    <string name="qk_clear">Clear</string>
    <string name="qk_section_column">Columns</string>
    <string name="qk_section_databases">Databases</string>
    <string name="qk_section_operators">Operators</string>
    <string name="qk_section_snippets">Snippets</string>
    <string name="qk_section_tables">Tables</string>

    <string name="query_database">Database</string>
    <string name="query_hint">SELECT * FROM table;</string>
    <string name="query_loading">[Loading]</string>
    <string name="query_none">[None]</string>
    <string name="query_table">Table</string>

    <string name="results_next">Next</string>
    <string name="results_previous">Prev</string>
    <string name="results_showing_records_to">records %1$d - %2$d (%3$d)</string>

    <string name="saved_queries_built_in">Built-In</string>
    <string name="saved_queries_saved">Saved</string>

    <string name="table_list_type_table">(Table)</string>
    <string name="table_list_type_view">(View)</string>
    <string name="item_browse_databases">Databases</string>
    <string name="item_browse_tables">Tables</string>
    <string name="item_browse_selected_">Selected: %s</string>
    <string name="item_browse_none_selected">[None]</string>
    <string name="query_saved">Query saved!</string>
    <string name="query_failed_saving">Failed to save query</string>
    <string name="query_missing_name">Please enter a name for the query.</string>
    <string name="query_no_database_selected">No database selected</string>
</resources>
