<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <app.devlife.connect2sql.ui.widget.TableGrid
        android:id="@+id/tg_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pagination_bar">
    </app.devlife.connect2sql.ui.widget.TableGrid>

    <LinearLayout
        android:id="@+id/pagination_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:text="@string/results_previous"
            android:contentDescription="@string/results_previous"
            android:background="@color/transparent"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/results_showing_records_to"/>

        <ImageButton
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/results_next"
            android:src="@drawable/arrow_right"
            android:background="@color/transparent"/>
    </LinearLayout>

</RelativeLayout>